Added newHashSet and newLinkedHashSet methods to SetsOps, hardended addItem, appendItem, addSets, and appendSets, updated Javadocs, and added related tests